data/derived/sp14/progs/unify/prog0765.ml.out
Characters 79-87:
  else append (digitsOfInt (n / 10)) (n mod 10 :: []);;
                                      ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
